feat: top resource usecase impl
