# internal/server/grpc.go
@@ -2,6 +2,7 @@ package server
 
 import (
 	v1 "YYeTsBot-Go/api/helloworld/v1"
+	ets "YYeTsBot-Go/api/yyets/v1"
 	"YYeTsBot-Go/internal/conf"
 	"YYeTsBot-Go/internal/service"
 
@@ -11,7 +12,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, resource *service.ResourceService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -28,5 +29,6 @@ func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 	}
 	srv := grpc.NewServer(opts...)
 	v1.RegisterGreeterServer(srv, greeter)
+	ets.RegisterResourceServer(srv, resource)
 	return srv
 }
